@@ -1,0 +1,8 @@
+require_relative "base"
+
+module Administrate
+  module Field
+    class Polymorphic < Base
+    end
+  end
+end
